--- a/Quiz App/singlePlayer.storyboard
+++ b/Quiz App/singlePlayer.storyboard
@@ -93,7 +93,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Timer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WpQ-kb-OhX">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WpQ-kb-OhX">
                                 <rect key="frame" x="143" y="20" width="53" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -104,8 +104,8 @@
                                 <rect key="frame" x="154" y="79" width="60" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftw-Nd-Vli">
-                                <rect key="frame" x="203" y="29" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftw-Nd-Vli">
+                                <rect key="frame" x="31" y="29" width="310" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -122,13 +122,14 @@
                         <outlet property="answerLabel_D" destination="jhM-hy-lIi" id="u0B-IL-tyY"/>
                         <outlet property="currentQuestionNumberLabel" destination="0m6-1L-Twv" id="Ni7-VW-GDW"/>
                         <outlet property="questionLabel" destination="iqh-pp-UbF" id="ziH-0g-Xa8"/>
+                        <outlet property="scoreLabel" destination="yEU-Oe-A13" id="bzR-R0-INJ"/>
                         <outlet property="timerLabel" destination="ftw-Nd-Vli" id="RQs-d5-yvQ"/>
                         <outlet property="totalQuestionLabel" destination="FgJ-jG-2Nc" id="GLE-ZY-SB3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="40Y-RI-epb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-170" y="94"/>
+            <point key="canvasLocation" x="-170.40000000000001" y="93.103448275862078"/>
         </scene>
     </scenes>
     <resources>
